@@ -9,7 +9,7 @@
 '\"	    Department of Computer Science,
 '\"	    Australian National University.
 '\"
-'\" RCS: @(#) $Id: FindPhoto.3,v 1.4 2002/06/14 13:35:47 dkf Exp $
+'\" RCS: @(#) $Id: FindPhoto.3,v 1.5 2002/06/14 14:07:50 dkf Exp $
 '\"
 .so man.macros
 .TH Tk_FindPhoto 3 8.0 Tk "Tk Library Procedures"
@@ -220,8 +220,9 @@ calls to \fBTk_PhotoPutBlock\fR, \fBTk_PhotoPutZoomedBlock\fR or
 In Tk 8.3 and earlier, \fBTk_PhotoPutBlock\fR and
 \fBTk_PhotoPutZoomedBlock\fR had different signatures. If you want to
 compile code that uses the old interface against 8.4 without updating
-your code, compile it with the flag -DUSE_OLD_PHOTO_PUT_BLOCK.  Code
-linked using Stubs against older versions of Tk will continue to work.
+your code, compile it with the flag
+-DUSE_COMPOSITELESS_PHOTO_PUT_BLOCK.  Code linked using Stubs against
+older versions of Tk will continue to work.
 .VE 8.4
 
 .SH CREDITS
